# srbf

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  NOTICE  README.md  THIRD_PARTY_LICENSES  explorer.js  index.html  mkdocs.yml  paired_data.js  paired_data.json  pyproject.toml  results_data.js  styles.css
.github/workflows/: pages.yaml  publish.yaml  pytest.yml
adapters/: index.html
assets/brand/: README.md
benchmarks/: index.html
configs/evaluation/: fastsrb.yaml  run_flash_ansr_fastsrb_quick.yaml  run_flash_ansr_v23_val_quick.yaml
configs/evaluation/PySR_niterations/: evaluation_niterations_1.yaml  evaluation_niterations_1024.yaml  evaluation_niterations_1048576.yaml  evaluation_niterations_128.yaml  evaluation_niterations_16.yaml  evaluation_niterations_16384.yaml  evaluation_niterations_2.yaml  evaluation_niterations_2048.yaml  evaluation_niterations_256.yaml  evaluation_niterations_32.yaml  evaluation_niterations_32768.yaml  evaluation_niterations_4.yaml  evaluation_niterations_4096.yaml  evaluation_niterations_512.yaml  evaluation_niterations_64.yaml  evaluation_niterations_65536.yaml  evaluation_niterations_8.yaml  evaluation_niterations_8192.yaml
configs/evaluation/campaign_split/: pysr_noise_fastsrb_cluster.yaml  pysr_noise_fastsrb_solomon.yaml  pysr_noise_val_cluster.yaml  pysr_noise_val_solomon.yaml  pysr_scaling_fastsrb_cluster.yaml  pysr_scaling_fastsrb_solomon.yaml  pysr_scaling_val_cluster.yaml  pysr_scaling_val_solomon.yaml  pysr_support_fastsrb_cluster.yaml  pysr_support_fastsrb_solomon.yaml  pysr_support_val_cluster.yaml  pysr_support_val_solomon.yaml
configs/evaluation/noise_sweep/: brute_force_fastsrb.yaml  brute_force_v23_val.yaml  e2e_fastsrb.yaml  e2e_val.yaml  lample_charton_fastsrb.yaml  lample_charton_val.yaml  nesymres_fastsrb.yaml  nesymres_v23_val.yaml  nesymres_val.yaml  pysr_fastsrb.yaml  pysr_v23_val.yaml  pysr_val.yaml  skeleton_pool_fastsrb.yaml  skeleton_pool_v23_val.yaml  skeleton_pool_val.yaml  v23.0-120M-A-U_fastsrb.yaml  v23.0-120M-A-U_val.yaml  v23.0-120M-C1-uniform_fastsrb.yaml  v23.0-120M-C1-uniform_val.yaml  v23.0-120M-ablation-1_fastsrb.yaml  v23.0-120M-ablation-1_val.yaml  v23.0-120M-ablation-2_fastsrb.yaml  v23.0-120M-ablation-2_val.yaml  v23.0-120M_fastsrb.yaml  v23.0-120M_v23_val.yaml  v23.0-120M_val.yaml  v23.0-1B_fastsrb.yaml  v23.0-1B_val.yaml  v23.0-20M_fastsrb.yaml  v23.0-20M_v23_val.yaml  v23.0-20M_val.yaml  v23.0-3M_fastsrb.yaml  v23.0-3M_v23_val.yaml  v23.0-3M_val.yaml
configs/evaluation/panels/: pysr_parsimony_0p0032_noise_fastsrb.yaml  pysr_parsimony_0p0032_noise_val.yaml  pysr_parsimony_0p0032_scaling_fastsrb.yaml  pysr_parsimony_0p0032_scaling_val.yaml  pysr_parsimony_0p0032_support_fastsrb.yaml  pysr_parsimony_0p0032_support_val.yaml  pysr_parsimony_0p032_noise_fastsrb.yaml  pysr_parsimony_0p032_noise_val.yaml  pysr_parsimony_0p032_scaling_fastsrb.yaml  pysr_parsimony_0p032_scaling_val.yaml  pysr_parsimony_0p032_support_fastsrb.yaml  pysr_parsimony_0p032_support_val.yaml
configs/evaluation/scaling/: brute_force_fastsrb.yaml  brute_force_v23_val.yaml  e2e_fastsrb.yaml  e2e_val.yaml  flash_ansr_fastsrb.yaml  flash_ansr_v23_val.yaml  lample_charton_fastsrb.yaml  lample_charton_val.yaml  nesymres_fastsrb.yaml  nesymres_fastsrb_long.yaml  nesymres_v23_val.yaml  nesymres_val.yaml  pysr_fastsrb.yaml  pysr_fastsrb_long.yaml  pysr_v23_val.yaml  pysr_val.yaml  rebuttal-20M-simplipy_fastsrb.yaml  rebuttal-20M-sympy-50K_fastsrb.yaml  rebuttal-20M-sympy-simplipy-infer_fastsrb.yaml  rebuttal-20M-sympy_fastsrb.yaml  rebuttal-20M-unsimplified_fastsrb.yaml  skeleton_pool_fastsrb.yaml  skeleton_pool_v23_val.yaml  skeleton_pool_val.yaml  v23.0-120M-A-U_fastsrb.yaml  v23.0-120M-A-U_val.yaml  v23.0-120M-B1-postnorm_fastsrb.yaml  v23.0-120M-B2-16bit_fastsrb.yaml  v23.0-120M-B4-layernorm_fastsrb.yaml  v23.0-120M-C1-uniform_fastsrb.yaml  v23.0-120M-C1-uniform_val.yaml  v23.0-120M-Z1-bfgs_fastsrb.yaml  v23.0-120M-Z2-beam_fastsrb.yaml  (+36 more)
configs/test/: dataset_train.yaml  dataset_val.yaml  evaluation.yaml  expression_space.yaml  model.yaml  model_no_numeric_head.yaml  model_numeric_head.yaml  model_numeric_head_deterministic.yaml  nsr.yaml  simplipy_engine.yaml  skeleton_pool_quantized.yaml  skeleton_pool_quantized_no_transform.yaml  tokenizer.yaml  train.yaml  train_no_numeric_head.yaml  train_numeric_head.yaml  train_numeric_head_deterministic.yaml
docs/: adapters.md  benchmarks.md  fairness.md  index.md  models.md  paired.md  requirements.txt  results.md  results_data.json  running.md
docs/javascripts/: results_explorer.js
models/: index.html
results/: index.html
results-site/: README.md  explorer.js  index.html  paired_data.js  paired_data.json  results_data.js  results_data.json  styles.css
results-site/tests/: copy_lint.py  package.json  playwright.config.mjs  site.spec.mjs
running/: index.html
scripts/: audit_pysr_maxsize.py  derive_noise_margins.py  patch_nesymres.py  patch_symbolicregression.py  patch_typing_io.py
search/: search_index.json
src/srbf/: __init__.py  __main__.py  analysis.py  benchmark.py  candidate_store.py  config.py  core.py  data_sources.py  model_adapters.py  provenance.py  reporting.py  result_processing.py  sample_metadata.py  store.py  sweep.py
stylesheets/: results_explorer.css
tests/: conftest.py  test_benchmark.py  test_fvu_correctness.py  test_overlap_engine.py  test_provenance.py
tests/fixtures/: golden_baseline_results.json
tests/test_baselines/: test_brute_force_model.py  test_dedup_golden.py  test_lample_charton_model.py  test_skeleton_pool_model.py
tests/test_benchmarks/: test_fastsrb.py
tests/test_eval/: test_analysis.py  test_benchmark_config.py  test_candidate_store.py  test_catalog_source.py  test_data_sources.py  test_derive_metrics.py  test_engine.py  test_evaluation.py  test_metrics.py  test_model_adapters.py  test_model_adapters_baselines.py  test_paired_report.py  test_reference_metrics.py  test_reporting.py  test_result_store.py  test_run_config.py  test_scaling_configs.py  test_sweep.py  test_token_prediction.py
(+127 files in other folders)
