# srbf: the symbolic-regression evaluation framework, carved from flash-ansr.
# Internal self-imports are srbf.* ; the §5 contract imports stay flash_ansr.* (one-way dependency;
# flash-ansr must NEVER import srbf).
[project]
name = "srbf"
description = "srbf: the symbolic-regression benchmark framework (Benchmark driver, model adapters, metrics) over symbolic-data catalogs and flash-ansr."
authors = [{ name = "Paul Saegert" }]
readme = "README.md"
requires-python = ">=3.12"
version = "0.5.4"
license = "MIT"
license-files = ["LICEN[CS]E*", "THIRD_PARTY_LICENSES*"]

dependencies = [
    "flash-ansr~=0.9",   # one-way dep; provides FlashANSR.infer() + the CandidateLedger join
    "simplipy>=0.3.1",   # DIRECT: baselines + normalize_* (moved here from flash-ansr)
    "symbolic-data>=0.9", # DIRECT: catalog / ProblemSource data layer (CatalogSource wraps it)
    "numpy>=1.24",
    "pandas>=1.3",       # runtime: baselines imported top-level by model_adapters.py
    "scikit-learn>=1.0", # runtime: baselines BaseEstimator, same reason
    "torch>=2.0",        # direct in provenance/model_adapters/token_prediction/baselines
    "tqdm",
    "pyyaml",            # config loading
    "zss",               # tree-edit-distance metric (eval-only)
    "editdistance",      # eval-only metric
]

[project.optional-dependencies]
# pip-installable third-party baselines whose imports are LAZY (not needed to `import srbf`).
baselines = [
    "sympy>=1.10",       # E2E + NeSymReS adapters (lazy)
    "pysr",              # PySRAdapter (lazy; also needs Julia at runtime)
    "omegaconf",         # NeSymReS adapter glue (compat/nesymres.py)
]
dev = ["pre-commit", "pytest", "pytest-cov", "mypy", "flake8", "srbf[baselines]"]

[project.scripts]
srbf = "srbf.__main__:main"   # carries ONLY the eval `run` command

[project.urls]
Repository = "https://github.com/psaegert/srbf"
Issues = "https://github.com/psaegert/srbf/issues"

# NB: the NeSymReS/E2E vendored model trees + weights are NOT pip deps and never enter the wheel;
# they are provisioned by a git-clone bench-setup flow using scripts/patch_nesymres.py.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]   # src/srbf/ ; the out-of-band nesymres clone tree is not under src/, so it stays out of the wheel

[tool.setuptools.package-data]
srbf = ["py.typed"]

[tool.mypy]
# Mirror flash-ansr's mypy settings (this code was carved from flash_ansr.eval and type-checked clean there).
no_implicit_optional = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
exclude = "(.venv|tests/|src/srbf/compat/nesymres.py)"   # vendored nesymres types unavailable (carried over from flash-ansr)
ignore_missing_imports = true

[tool.flake8]
ignore = ["E501", "W503"]
per-file-ignores = "__init__.py:F401"
